# FastAPIChatBot

./: .gitignore  Dockerfile  LICENSE  README.md  config.py  db.py  docker-compose.yml  main.py  openAI_client.py  pyproject.toml  requirements.txt  schemas.py
chat-frontend/: Dockerfile  package-lock.json  vite.config.js
chat-frontend/src/: App.css  App.jsx
tests/: conftest.py  test_routes.py
